JS - fix the rounded corners on firefox

--- a/stylesheets/spargonaut.css
+++ b/stylesheets/spargonaut.css
@@ -9,7 +9,7 @@ body  {
 }
 
 .rounded {
-	-moz-border-radius: 15px;
+	border-radius: 15px;
 	-webkit-border-radius: 15px;
 }
 
